# music-player

./: Dockerfile  LICENSE  run.sh
src/: CMakeLists.txt  main.cpp
src/components/: component_layout.cpp
